Terraform-Self-Hosted-Kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: blog-app-ingress
    annotations:
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
        alb.ingress.kubernetes.io/load-balancer-name: blog-app-alb
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: instance
        alb.ingress.kubernetes.io/tags: app=blog, devops-demo=true
spec:
  ingressClassName: alb
  rules:
    - host: blog2.adityaitc.theaditya.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "blog-app-svc"
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: "login-app-svc"
                port:
                  number: 80
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: "login-app-svc"
                port:
                  number: 80
